--- a/index.html
+++ b/index.html
@@ -102,7 +102,44 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="experience">
     <h2 class="w3-padding-16 w3-text-light-grey">Experience</h3>
     <hr style="width:200px" class="w3-opacity">
+
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-half w3-margin-bottom">
+        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+        <li class="w3-dark-grey w3-xlarge w3-padding-32"></li>
+          <li class="w3-padding-16">Company</li>
+          <li class="w3-padding-16">Job title</li>
+          <li class="w3-padding-16">Years</li>
+        </ul>
+      </div>
+
+      <div class="w3-half">
+        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+        <li class="w3-dark-grey w3-xlarge w3-padding-32"></li>
+          <li class="w3-padding-16">Panamericano</li>
+          <li class="w3-padding-16">Developer Sr.</li>
+          <li class="w3-padding-16">2024</li>
+        </ul>
+      </div>
+    </div>
     
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-margin-bottom">
+        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+          <li class="w3-padding-16" >
+            <span class="w3-opacity"> 
+            	Develop and improve the CRM Company.<p></p>
+                Creation and update the new endpoints, plugins.<p></p>
+                Update the new requirements to the CRM DB.<p></p> 
+                Help Desk Level 2.<p></p> 
+            </span>
+          </li>
+        </ul>
+      </div>
+    </div>
+    
+    <p></p>
+
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
