--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Summary</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>19 years of expertise</p>
+    <p>20 years of expertise (2004-2024)</p>
     <p>Spanish Native & English Conversational</p>
     <p>All phases of software development life cycle</p>
     <p>Requirements analysis, design, development, testing, documentation</p>
