--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Jorge Castañeda</h1>
     <p></p>
-    <h2 <p>IT Engineer </h2>
+    <h2><p>IT Engineer </h2>
     <!--img src="/w3images/.jpg" alt="boy" class="w3-image" width="992" height="1108"-->
   </header>
 
@@ -76,14 +76,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Summary</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>20 years of expertise (2004-2024)</p>
-    <p>Spanish Native & English Conversational</p>
-    <p>All phases of software development life cycle</p>
+    <p>21 years of expertise (2004-2025)</p>
+    <p>Spanish (Native) & English Languages</p>
+    <p>Cloud Developer Sr</p>
     <p>Requirements analysis, design, development, testing, documentation</p>
+    <p>All phases of software development life cycle</p>
     <p>Web Applications (IIS 5-7), HTML, CSS, XML, JSON, Webservices, Bootstrap, Microservices</p>
     <p>Mobile Apps (Android)</p>
     <p>Microsoft Technologies (.Net Framework (2 - 4.6), .Net Core, ASP.Net, C#.Net, Visual Basic 6, Visual Basic.Net, WCF, AJAX, ADO.NET,  JQuery, LINQ, WPF, MVVM, MVC, Web Forms, ADO, 
-    	Visual Studio 2003-2022, Team Foundation Server, BizTalk Server, Microsoft Dynamics 365, Microsoft Dataverse, Azure DevOps Server)</p>
+    	Visual Studio 2003-2022, Team Foundation Server, BizTalk Server, Microsoft Dynamics, Microsoft Dataverse, Azure DevOps Server)</p>
     <p>Java, JavaScript, Netbeans, Android Studio</p>
     <p>Database SQL Server, Oracle, Room & Firebird (Management)</p>
     <p>PL-SQL (Tables, Store Procedures, Index, Triggers, Jobs, Types, Joins, Views)</p>
@@ -97,6 +98,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Natural (ADABAS)</p>
     <p>XrmToolBox</p>
     <p>Postman</p>
+    <p>Snowflake</p>
    </div>
    
    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="experience">
@@ -118,7 +120,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <li class="w3-dark-grey w3-xlarge w3-padding-32"></li>
           <li class="w3-padding-16">Panamericano</li>
           <li class="w3-padding-16">Developer Sr.</li>
-          <li class="w3-padding-16">2024</li>
+          <li class="w3-padding-16">2024-Now</li>
         </ul>
       </div>
     </div>
@@ -129,9 +131,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           <li class="w3-padding-16" >
             <span class="w3-opacity"> 
             	Develop and improve the CRM Company.<p></p>
-                Creation and update the new endpoints, plugins.<p></p>
-                Update the new requirements to the CRM DB.<p></p> 
-                Help Desk Level 2.<p></p> 
+                Help Desk Level 2 (Level 2 Helper Website & API).<p></p>
+                Creation and update the new endpoints<p></p>
+                New requirements to the CRM DB, CRM plugins<p></p> 
+                Microsoft Dynamics integrations<p></p>
+                Dynamic Routing<p></p>
+                Snowflake<p></p> 
             </span>
           </li>
         </ul>
