--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Jorge Castañeda</h1>
     <p></p>
-    <h2><p>IT Engineer </h2>
+    <h2>IT Engineer </h2>
     <!--img src="/w3images/.jpg" alt="boy" class="w3-image" width="992" height="1108"-->
   </header>
 
