--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Natural (ADABAS)</p>
     <p>XrmToolBox</p>
     <p>Postman</p>
-    <p>Snowflake</p>
+    <p>Snowflake (DevOps, Rest API, etc.)</p>
+    <p>Salesforce (Trailhead, Agentforce, Agentbuilder, etc.)</p>
    </div>
    
    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="experience">
