--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <!-img src="/w3images/.jpg" style="width:100%"-->
+  <!--img src="/w3images/.jpg" style="width:100%"-->
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -76,15 +76,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Summary</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>21 years of expertise (2004-2025)</p>
+    <p>21 IT years of expertise (2004-2025) +3 (Teacher)</p>
     <p>Spanish (Native) & English Languages</p>
     <p>Cloud Developer Sr</p>
     <p>Requirements analysis, design, development, testing, documentation</p>
     <p>All phases of software development life cycle</p>
+	<p>AI Tools, Bots training, ML, LLM</p>
+	<p>Postman</p>
+    <p>Snowflake (DevOps, Rest API, etc.)</p>
+    <p>Salesforce (Trailhead, Agentforce, Agentbuilder, etc.)</p>
     <p>Web Applications (IIS 5-7), HTML, CSS, XML, JSON, Webservices, Bootstrap, Microservices</p>
     <p>Mobile Apps (Android)</p>
     <p>Microsoft Technologies (.Net Framework (2 - 4.6), .Net Core, ASP.Net, C#.Net, Visual Basic 6, Visual Basic.Net, WCF, AJAX, ADO.NET,  JQuery, LINQ, WPF, MVVM, MVC, Web Forms, ADO, 
     	Visual Studio 2003-2022, Team Foundation Server, BizTalk Server, Microsoft Dynamics, Microsoft Dataverse, Azure DevOps Server)</p>
+	<p>Aspire .Net</p>
     <p>Java, JavaScript, Netbeans, Android Studio</p>
     <p>Database SQL Server, Oracle, Room & Firebird (Management)</p>
     <p>PL-SQL (Tables, Store Procedures, Index, Triggers, Jobs, Types, Joins, Views)</p>
@@ -92,14 +97,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Experience in design patterns such as Singleton, Factory and Composition.</p>
     <p>Developed User controls for reusability</p>
     <p>Client-side scripting (JavaScript, JQuery, AJAX)</p>
-    <p>Developing and consuming web services, API, </p>
+    <p>Developing and consuming web services, API </p>
     <p>Unit test cases</p>
     <p>Interpersonal and communication skills</p>
     <p>Natural (ADABAS)</p>
     <p>XrmToolBox</p>
-    <p>Postman</p>
-    <p>Snowflake (DevOps, Rest API, etc.)</p>
-    <p>Salesforce (Trailhead, Agentforce, Agentbuilder, etc.)</p>
+	<p>CRM Managment</p>
    </div>
    
    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="experience">
