--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Salesforce (Trailhead, Agentforce, Agentbuilder, etc.)</p>
     <p>Web Applications (IIS 5-7), HTML, CSS, XML, JSON, Webservices, Bootstrap, Microservices</p>
     <p>Mobile Apps (Android)</p>
-    <p>Microsoft Technologies (.Net Framework (2 - 4.6), .Net Core, ASP.Net, C#.Net, Visual Basic 6, Visual Basic.Net, WCF, AJAX, ADO.NET,  JQuery, LINQ, WPF, MVVM, MVC, Web Forms, ADO, 
+    <p>Microsoft Technologies (.Net Framework (2-4.8), .Net Core (5-9), ASP.Net, C#.Net, Visual Basic 6, Visual Basic.Net, WCF, AJAX, ADO.NET,  JQuery, LINQ, WPF, MVVM, MVC, Web Forms, ADO, 
     	Visual Studio 2003-2022, Team Foundation Server, BizTalk Server, Microsoft Dynamics, Microsoft Dataverse, Azure DevOps Server)</p>
-	<p>Aspire .Net</p>
+	<p>Aspire .Net, .NET MAUI</p>
     <p>Java, JavaScript, Netbeans, Android Studio</p>
     <p>Database SQL Server, Oracle, Room & Firebird (Management)</p>
     <p>PL-SQL (Tables, Store Procedures, Index, Triggers, Jobs, Types, Joins, Views)</p>
