--- a/index.html
+++ b/index.html
@@ -79,17 +79,23 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>21 IT years of expertise (2004-2025) +3 (Teacher)</p>
     <p>Spanish (Native) & English Languages</p>
     <p>Cloud Developer Sr</p>
+	<p>Google Cloud [Management, Developer, Deplyoment, ...]</p>
+	<p>Azure [Management, Developer, Deplyoment, ...]</p>
     <p>Requirements analysis, design, development, testing, documentation</p>
     <p>All phases of software development life cycle</p>
 	<p>AI Tools, Bots training, ML, LLM</p>
-	<p>Postman</p>
+	<p>Google Cloud (Managment, API's [Google Maps, Google Weather, ...])</p>
     <p>Snowflake (DevOps, Rest API, etc.)</p>
     <p>Salesforce (Trailhead, Agentforce, Agentbuilder, etc.)</p>
+	<p>Stripe (Managment, Customers, Intents, Payments, Payments Links, ...)</p>
     <p>Web Applications (IIS 5-7), HTML, CSS, XML, JSON, Webservices, Bootstrap, Microservices</p>
     <p>Mobile Apps (Android)</p>
     <p>Microsoft Technologies (.Net Framework (2-4.8), .Net Core (5-9), ASP.Net, C#.Net, Visual Basic 6, Visual Basic.Net, WCF, AJAX, ADO.NET,  JQuery, LINQ, WPF, MVVM, MVC, Web Forms, ADO, 
     	Visual Studio 2003-2022, Team Foundation Server, BizTalk Server, Microsoft Dynamics, Microsoft Dataverse, Azure DevOps Server)</p>
 	<p>Aspire .Net, .NET MAUI</p>
+	<p>Selenium (Automatization test & tools)</p>
+	<p>Github</p>
+	<p>Postman</p>
     <p>Java, JavaScript, Netbeans, Android Studio</p>
     <p>Database SQL Server, Oracle, Room & Firebird (Management)</p>
     <p>PL-SQL (Tables, Store Procedures, Index, Triggers, Jobs, Types, Joins, Views)</p>
