--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>21 IT years of expertise (2004-2025) +3 (Teacher)</p>
     <p>Spanish (Native) & English Languages</p>
     <p>Cloud Developer Sr</p>
-	<p>Google Cloud [Management, Developer, Deplyoment, ...]</p>
-	<p>Azure [Management, Developer, Deplyoment, ...]</p>
+	<p>Google Cloud (Management, Developer, Deplyoment, API Google Maps, API Google Weather, ...)</p>
+	<p>Azure (Management, Developer, Deplyoment, ...)</p>
     <p>Requirements analysis, design, development, testing, documentation</p>
     <p>All phases of software development life cycle</p>
 	<p>AI Tools, Bots training, ML, LLM</p>
-	<p>Google Cloud (Managment, API's [Google Maps, Google Weather, ...])</p>
+	<p>Google Cloud (Managment, )</p>
     <p>Snowflake (DevOps, Rest API, etc.)</p>
     <p>Salesforce (Trailhead, Agentforce, Agentbuilder, etc.)</p>
 	<p>Stripe (Managment, Customers, Intents, Payments, Payments Links, ...)</p>
